2000-06-02  Chema Celorio  <chema@celorio.com>

	* undo.c (gedit_undo_check_size): implement.
	checks the undo list size and deletes the objects
	with levels < settings->undo_levels

	* dialogs/dialog-prefs.c (apply_cb): added undo_levels_stuff
	(undo_levels_toggled): new function
	(prepare_documents_page): add undo levels stuff

	* prefs.c: add undo levels.
	* prefs.h (struct _Preferences): ditto.

	* undo.c (gedit_undo_merge): check if the position
	of the undo text is the same as the last_undo
	(gedit_undo_merge): merge GEDIT_UNDO_DELETE too.

2000-06-02  Chema Celorio  <chema@celorio.com>

	* undo.c (gedit_undo_merge): New function. Merges
	a previous undo item with the new data. We now undo
	words and not chars. This also saves memory because
	of less gedit_undo struct's used.
	(gedit_undo_free_list): new function. Plugs a memleak
	(gedit_undo_add): verify if the data can be merged
	and call gedit_free_list

	* utils.h (gedit_debug): add newline to the undo macros,
	we have to delete the newline from all the other files.

	* undo.h (GEDIT_UNDO_DELETE): use unique enum's
	and not DELETE & INSERT

2000-06-01  Chema Celorio  <chema@celorio.com>

	* view.c (gedit_view_current): new function we should use
	this function now to add an abstraction layer for future
	changes.

	* undo.c (gedit_undo_add): plug a HUGe leak
	(gedit_undo_do): plug another leak.
	(gedit_undo_redo): adjust the current view, not undo->view
	(gedit_undo_do): ditto

	* undo.h (struct _gedit_undo): remove *view from _gedit_undo
	structure, we don't need it anymore and saves memory.


2000-06-01  Jason Leach  <leach@wam.umd.edu>

	* dialogs/Makefile.am (glade_msgs): removed find-line.glade.h so
	make distcheck could pass

2000-06-01  Chema Celorio  <chema@celorio.com>

	* document.h (struct _Document): rename buff to buffer
	to find all the places where it is beeing used.

	* file.c: use buffer now v.s. buff

	* document.c (gedit_document_get_buffer): new function,