@@ -1,3 +1,10 @@
+2000-06-04 Roberto Majadas <phoenix@nova.es>
+
+	* gedit.c (main): added a call to gedit_file_stdin
+	* file.c (gedit_file_stdin): new function. Reads file from
+	stdin.
+	* document.c (gedit_document_stdin): new function
+
 2000-06-02  Chema Celorio  <chema@celorio.com>
 
 	* undo.c (gedit_undo_check_size): implement.
